css/style.css
a{
text-decoration: none;


}

p{
font-family: Arial, Helvetica, sans-serif;
color: rgb(48, 48, 48);
font-size: large;
text-align: justify;

}

h2{

    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    

}

.about{
background-image: url("about_bck.png");
}

.navbtn{
    -webkit-tap-highlight-color: transparent;
}



.nav_buttons{
height: 5vh;
grid-area:  1 / 1 / 1 / 11;
z-index: 1;
display: flex;
justify-content: center;
align-items: center;

}



.icon{
height: 5vh;
margin: 0 .5vw 0 .5vw;
}



.div_line{
background-color: rgba(206, 206, 206, 0.692);
height: .1vh;
width: auto;



}

.plane_img{
width: 25vw;

}

.plane_photos, .about{
display: flex;
justify-content: center;

}

.row{
    padding-top: 1vh;
    display: grid;
    justify-items: center;
grid-template-areas: "a b c";    
grid-auto-columns: 25vw;
    
}

.pfp{
    background-image: url("PFP.png");
width: 200px;
height: 200px;
background-size: contain;
border-radius: 100%;
margin-bottom: 5vh;
margin-top: 5vh;

}
.about{
    padding-top: 1vh;
    display: grid;
    justify-items: center;
grid-template-areas: "a";    
grid-auto-columns: 50vw;
    
}

@media (max-width: 700px) {
    .row{
       
    grid-template-areas: "a";    
   
        
    }

    .plane_img{
        width: 80vw;
        
        }


        .about{
   
        grid-auto-columns: 70vw;
            
        }

        p{
            font-size: medium;
        }

        .pfp{
            margin-bottom: 1vh;
            margin-top: 1vh;
        }

        h2{
            font-size: 12pt;
        }
        .navcomponent {
            text-align: center;
            background-color: white;
            position: fixed;
            top: 0;
            left: 0;
            width: 100%;
            
        }

        .plane_photos, .about{
            flex-wrap: wrap; /* Adjust as needed */
            margin-top: 4vh;
            
            }

    
  }
  

  @media (min-width: 700px) and ( max-width: 1200px) {
    .row{
       
        grid-template-areas: "a b";    
        grid-auto-columns: 45vw;
   
        
    }

    .plane_img{
        width: 45vw;
        }
  }

